Update: main - Diff report completed

--- a/diff_USB_energy_refactor.html
+++ b/diff_USB_energy_refactor.html
@@ -18778,7 +18778,7 @@
     <td class="d2h-del d2h-change">
         <div class="d2h-code-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn">        <del>gw_id</del> <del>= coordinator.data</del>[<del>0</del>]<del>[</del>&quot;<del>gateway_id</del>&quot;<del>]</del></span>
+            <span class="d2h-code-line-ctn">        <del>gw_id</del> <del>= coordinator</del>.<del>data[0][</del>&quot;<del>gateway_id</del>&quot;<del>]</del></span>
         </div>
     </td>
 </tr><tr>
@@ -19207,7 +19207,7 @@
     <td class="d2h-ins d2h-change">
         <div class="d2h-code-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">        <ins>if</ins> <ins>device</ins>[<ins>&quot;dev_class&quot;</ins>]<ins> != </ins>&quot;<ins>heater_central</ins>&quot;<ins>:</ins></span>
+            <span class="d2h-code-line-ctn">        <ins>if</ins> <ins>device</ins>.<ins>get(</ins>&quot;<ins>dev_class</ins>&quot;<ins>) != &quot;heater_central&quot;:</ins></span>
         </div>
     </td>
 </tr><tr>
