--- a/diff_select_schedule_fix.html
+++ b/diff_select_schedule_fix.html
@@ -14614,7 +14614,7 @@
     <td class="d2h-ins">
         <div class="d2h-code-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">        if device[&quot;dev_class&quot;] != &quot;heater_central&quot;:</span>
+            <span class="d2h-code-line-ctn">        if device.get(&quot;dev_class&quot;) != &quot;heater_central&quot;:</span>
         </div>
     </td>
 </tr><tr>
