--- a/diff_usb_tests.html
+++ b/diff_usb_tests.html
@@ -19029,7 +19029,7 @@
     <td class="d2h-del d2h-change">
         <div class="d2h-code-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn">        <del>self._name</del> <del>=</del> <del>None</del></span>
+            <span class="d2h-code-line-ctn">        <del>self</del>.<del>_name</del> <del>=</del> <del>None</del></span>
         </div>
     </td>
 </tr><tr>
@@ -19854,7 +19854,7 @@
     <td class="d2h-ins d2h-change">
         <div class="d2h-code-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">        <ins>if</ins> <ins>device[&quot;dev_class&quot;]</ins> <ins>!= &quot;heater_central&quot;:</ins></span>
+            <span class="d2h-code-line-ctn">        <ins>if device</ins>.<ins>get(&quot;dev_class&quot;)</ins> <ins>!=</ins> <ins>&quot;heater_central&quot;:</ins></span>
         </div>
     </td>
 </tr><tr>
