--- a/diff_huub66.html
+++ b/diff_huub66.html
@@ -16767,7 +16767,7 @@
     <td class="d2h-del d2h-change">
         <div class="d2h-code-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn">  &quot;<del>version</del>&quot;: &quot;<del>0</del>.<del>25</del>.<del>1a4</del>&quot;,</span>
+            <span class="d2h-code-line-ctn">  &quot;<del>version</del>&quot;: &quot;<del>0</del>.<del>25</del>.<del>1a5</del>&quot;,</span>
         </div>
     </td>
 </tr><tr>
@@ -16800,7 +16800,7 @@
     <td class="d2h-del d2h-change">
         <div class="d2h-code-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn">  &quot;<del>requirements</del>&quot;: [&quot;<del>https:&#x2F;&#x2F;test-files</del>.<del>pythonhosted</del>.<del>org&#x2F;packages&#x2F;b1&#x2F;3c&#x2F;bfcb1206bde6452e3637a32f7a6c0697f33a09fdb75381ddb7825a6ebafd&#x2F;plugwise-0</del>.<del>20.1a2.tar.gz#plugwise==0.20.1a2</del>&quot;],</span>
+            <span class="d2h-code-line-ctn">  &quot;<del>requirements</del>&quot;: [&quot;<del>https:&#x2F;&#x2F;test-files</del>.<del>pythonhosted</del>.<del>org&#x2F;packages&#x2F;ae&#x2F;0d&#x2F;422b5bab21216f77be3eace604bf9a5e3592211674e2f70b0d975b9f3083&#x2F;plugwise-0</del>.<del>20.1a3.tar.gz#plugwise==0.20.1a3</del>&quot;],</span>
         </div>
     </td>
 </tr><tr>
