--- a/diff_huub66.html
+++ b/diff_huub66.html
@@ -16833,7 +16833,7 @@
     <td class="d2h-del d2h-change">
         <div class="d2h-code-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn">  &quot;<del>version</del>&quot;: &quot;<del>0</del>.<del>25</del>.<del>1a7</del>&quot;,</span>
+            <span class="d2h-code-line-ctn">  &quot;<del>version</del>&quot;: &quot;<del>0</del>.<del>25</del>.<del>1a8</del>&quot;,</span>
         </div>
     </td>
 </tr><tr>
@@ -16866,7 +16866,7 @@
     <td class="d2h-del d2h-change">
         <div class="d2h-code-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn">  &quot;<del>requirements</del>&quot;: [&quot;<del>https:&#x2F;&#x2F;test-files</del>.<del>pythonhosted</del>.<del>org&#x2F;packages&#x2F;7d&#x2F;a0&#x2F;b19b6422be26f5aa9bd7f125b4dca7e56907c9ce70224ab42273dc35981e&#x2F;plugwise-0</del>.<del>20.1a6.tar.gz#plugwise==0.20.1a6</del>&quot;],</span>
+            <span class="d2h-code-line-ctn">  &quot;<del>requirements</del>&quot;: [&quot;<del>https:&#x2F;&#x2F;test-files</del>.<del>pythonhosted</del>.<del>org&#x2F;packages&#x2F;7e&#x2F;cd&#x2F;abdff60b0e57a6e8d6c843e1a2e7e78ef8d7a172e7f308a20164da217201&#x2F;plugwise-0</del>.<del>20.1a8.tar.gz#plugwise==0.20.1a8</del>&quot;],</span>
         </div>
     </td>
 </tr><tr>
