Update: main - Diff report completed

--- a/diff_usb_tests.html
+++ b/diff_usb_tests.html
@@ -18402,7 +18402,7 @@
     <td class="d2h-del d2h-change">
         <div class="d2h-code-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn">    <del>for</del> <del>component in platforms:</del></span>
+            <span class="d2h-code-line-ctn">    <del>for</del> <del>component</del> <del>in platforms:</del></span>
         </div>
     </td>
 </tr><tr>
@@ -18490,7 +18490,7 @@
     <td class="d2h-ins d2h-change">
         <div class="d2h-code-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">    <ins>hass.config_entries.async_setup_platforms(entry,</ins> <ins>PLATFORMS_GATEWAY)</ins></span>
+            <span class="d2h-code-line-ctn">    <ins>await</ins> <ins>hass.config_entries.async_forward_entry_setups(entry,</ins> <ins>PLATFORMS_GATEWAY)</ins></span>
         </div>
     </td>
 </tr><tr>
